// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c4 {
  font-style: italic;
}

kbd.c4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c4 {
  font-weight: bold;
}

sub.c4,
sup.c4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c4,
u.c4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c4,
cite.c4,
var.c4,
em.c4 {
  font-style: italic;
}

kbd.c4,
pre.c4,
samp.c4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c4 .c5 {
  top: 0.1em;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #35709e;
  border-radius: 4px;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="info"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <span
        class="c4 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c7 {
  top: 0.1em;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c7 {
  top: 0.1em;
}

.c4 {
  font-weight: 600;
  margin-bottom: 0.5rem;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #35709e;
  border-radius: 4px;
}

.c3 {
  padding: 1rem;
}

@media (max-width:480px) {
  h1.c5 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c5 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c5 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c5 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
  role="alert"
  type="info"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <h6
        class="c4 heading c5 c1"
      >
        Title
      </h6>
      <span
        class="c6 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a type prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c4 {
  font-style: italic;
}

kbd.c4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c4 {
  font-weight: bold;
}

sub.c4,
sup.c4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c4,
u.c4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c4,
cite.c4,
var.c4,
em.c4 {
  font-style: italic;
}

kbd.c4,
pre.c4,
samp.c4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c4 .c5 {
  top: 0.1em;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #c9444d;
  border-radius: 4px;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="danger"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <span
        class="c4 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when hasIcon prop is true 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  fill: #c9444d;
  position: relative;
  height: 1.5em;
  width: 1.5em;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c4 {
  top: 0.1em;
}

.c9 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c9 + .sub-heading {
  margin-top: -1rem;
}

.c9:last-child {
  margin-bottom: 0;
}

h1.c9 {
  font-size: 3rem;
}

h2.c9 {
  font-size: 2.5rem;
}

h3.c9 {
  font-size: 2rem;
}

h4.c9 {
  font-size: 1.5rem;
}

h5.c9 {
  font-size: 1.25rem;
}

h6.c9 {
  font-size: 1rem;
}

.c9 .c4 {
  top: 0.1em;
}

.c8 {
  font-weight: 600;
  margin-bottom: 0.5rem;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #c9444d;
  border-radius: 4px;
}

.c7 {
  padding: 1rem;
  padding-left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

@media (max-width:480px) {
  h1.c9 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c9 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c9 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c9 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c9 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
  role="alert"
  type="danger"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <svg
        class="c4 c5 c6"
        color="danger"
        role="img"
        size="1.5"
        style="size: 1.5px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
          fill-rule="even-odd"
        />
      </svg>
    </div>
    <div
      class="c7 c1"
    >
      <h6
        class="c8 heading c9 c1"
      >
        Title
      </h6>
      <span
        class="c10 c1"
      >
        Alert
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when hasIcon prop is true for only a title 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  fill: #c9444d;
  position: relative;
  height: 1em;
  width: 1em;
}

.c10 .c4 {
  top: 0.1em;
}

.c9 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c9 + .sub-heading {
  margin-top: -1rem;
}

.c9:last-child {
  margin-bottom: 0;
}

h1.c9 {
  font-size: 3rem;
}

h2.c9 {
  font-size: 2.5rem;
}

h3.c9 {
  font-size: 2rem;
}

h4.c9 {
  font-size: 1.5rem;
}

h5.c9 {
  font-size: 1.25rem;
}

h6.c9 {
  font-size: 1rem;
}

.c9 .c4 {
  top: 0.1em;
}

.c8 {
  font-weight: 600;
  margin-bottom: 0.5rem;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #c9444d;
  border-radius: 4px;
}

.c7 {
  padding: 1rem;
  padding-left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

@media (max-width:480px) {
  h1.c9 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c9 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c9 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c9 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c9 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
  role="alert"
  type="danger"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <svg
        class="c4 c5 c6"
        color="danger"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
          fill-rule="even-odd"
        />
      </svg>
    </div>
    <div
      class="c7 c1"
    >
      <h6
        class="c8 heading c9 c1"
      >
        Title
      </h6>
    </div>
  </div>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #35709e;
  border-radius: 4px;
}

.c3 {
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
  type="info"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <div
      class="c3 c1"
    >
      <label>
        Alert
      </label>
    </div>
  </div>
</div>
`;
